# harbor

team_eval/: .gitignore  EVALUATION_METHODOLOGY.md  README.md  pyproject.toml  reflections.md
team_eval/resources/: 64d2f445-6025-4a5f-8a2a-77cefd001743.jsonl
team_eval/resources/64d2f445-6025-4a5f-8a2a-77cefd001743/subagents/: agent-a0177109069fe722f.jsonl  agent-a0177109069fe722f.meta.json  agent-a18e50503482b9552.jsonl  agent-a18e50503482b9552.meta.json  agent-a200598d0c62bbbf3.jsonl  agent-a2e1420e3b9212f38.jsonl  agent-a2e1420e3b9212f38.meta.json  agent-a3d50d1c496237836.jsonl  agent-a5a4e237ad897601d.jsonl  agent-a643ca4583b8f9d67.jsonl  agent-a643ca4583b8f9d67.meta.json  agent-a66dc5fa1523437c5.jsonl  agent-a8769f81c42816f07.jsonl  agent-a8769f81c42816f07.meta.json  agent-a9004ccf9dcfa4086.jsonl  agent-a9807fb1f718d61d1.jsonl  (+5 more)
team_eval/runs/64d2f445-6025-4a5f-8a2a-77cefd001743/: atif.json  eval.json  graph.json  report.html
team_eval/sessions/: index.json
team_eval/team_eval/: __init__.py  cli.py
team_eval/team_eval/atif/: __init__.py  convert.py  validate.py
team_eval/team_eval/eval/: __init__.py  annotator.py  checks.py  error_correction.py  judge_prompts.py  llm_judge.py  models.py  role_eval.py  stats.py  task_eval.py
team_eval/team_eval/graph/: __init__.py  build_graph.py  models.py  pattern_detect.py
team_eval/team_eval/harness/: __init__.py  dataset.py  pipeline.py  run_claude.py
team_eval/team_eval/parse/: __init__.py  event_normalize.py  models.py  session_loader.py
team_eval/team_eval/viz/: __init__.py  report_html.py
(+2 files in other folders)
