[project]
name = "team-eval"
version = "0.1.0"
description = "Parse, graph, ATIF-convert, visualize and evaluate Claude Code FleetView Team sessions"
requires-python = ">=3.12"
dependencies = ["pydantic>=2", "jinja2>=3"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["team_eval*"]
